# github-copilot-upgrading

./: .gitignore  README_ko.md
workshop/upgraded/: PROJECT_STRUCTURE.md  pyproject.toml  setup.py
workshop/upgraded/guachi/: database.py
