[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guachi"
version = "0.0.6"
description = "Global, persistent configurations as dictionaries"
readme = "README.rst"
license = {text = "MIT"}
authors = [
    {name = "Alfredo Deza", email = "alfredodeza@gmail.com"}
]
keywords = ["configuration", "management", "persistent", "dictionaries", "dictionary", "parse", "map", "mapping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/krmath76/github-copilot-upgrading"
Repository = "https://github.com/krmath76/github-copilot-upgrading"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["guachi"]
include-package-data = true